<resources>
    <string name="app_name">Map</string>
    <string name="Location">User\'s Location</string>

    <!--Categories-->
    <string name="Categories">Home</string>
    <string name="Categories2">Petrol Station</string>
    <string name="Categories3">Restaurants</string>
    <string name="Categories4">Police Stations</string>
    <string name="Categories5">Hotels</string>
    <string name="Categories6">LandMarks</string>
    <string name="Categories7">Schools</string>
    <string name="Categories8">More</string>

    <!--Bottom nav-->
    <string name="bottom_nav">Map</string>
    <string name="bottom_nav2">Places</string>
    <string name="bottom_nav3">Profile</string>

    <!--Search-->
    <string name="search_hint">Search Here</string>

    <!--Content Descriptions-->
    <string name="mic">Voice Search icon</string>
</resources>