<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/map_frag"
    tools:context=".fragments.MapFragment">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        map:mapType="satellite"
        map:uiCompass="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_margin="10dp"
        android:background="@drawable/toolbar_background"
        android:elevation="4dp"
        android:fadingEdge="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/mapSearchView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:elevation="0dp"
                android:background="@null"
                android:hint="@string/search_hint"
                android:imeOptions="flagNoExtractUi|actionSearch"
                android:inputType="textNoSuggestions"
                android:importantForAutofill="no" />
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/userImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_profile"
                app:riv_oval="true"/>
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        android:paddingStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar"
        tools:ignore="RtlSymmetry">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_background"
                app:cornerRadius="30dp"
                app:iconTint="@color/black"
                android:textColor="@color/black"
                android:layout_marginEnd="8dp"
                android:text="@string/Categories"
                app:icon="@drawable/ic_home_24"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_background"
                app:cornerRadius="30dp"
                android:layout_marginEnd="8dp"
                app:iconTint="@color/black"
                android:textColor="@color/black"
                android:text="@string/Categories2"
                app:icon="@drawable/ic_petrol_station_24"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_background"
                app:cornerRadius="30dp"
                app:iconTint="@color/black"
                android:textColor="@color/black"
                android:text="@string/Categories3"
                android:layout_marginEnd="8dp"
                app:icon="@drawable/ic_restaurant_24"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:cornerRadius="30dp"
                app:iconTint="@color/black"
                android:textColor="@color/black"
                android:text="@string/Categories4"
                android:layout_marginEnd="8dp"
                app:icon="@drawable/ic_local_police_24"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_background"
                app:cornerRadius="30dp"
                app:iconTint="@color/black"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                android:text="@string/Categories5"
                app:icon="@drawable/ic_hotel_24"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_background"
                app:cornerRadius="30dp"
                app:iconTint="@color/black"
                android:textColor="@color/black"
                android:text="@string/Categories6"
                android:layout_marginEnd="8dp"
                app:icon="@drawable/ic_landmarks_24"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_background"
                app:cornerRadius="30dp"
                app:iconTint="@color/black"
                android:textColor="@color/black"
                android:text="@string/Categories7"
                android:layout_marginEnd="8dp"
                app:icon="@drawable/ic_school_24"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_background"
                app:cornerRadius="30dp"
                app:iconTint="@color/black"
                android:textColor="@color/black"
                android:text="@string/Categories8"
                android:layout_marginEnd="8dp"
                app:icon="@drawable/ic_more"/>

        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/currLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/dark_background"
        android:contentDescription="@string/Location"
        android:src="@drawable/ic_my_location_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>